corrected logo, code spacing, BEM based on code review

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -23,16 +23,10 @@ body {
     text-decoration: none;
     color: $pry-color-light;
     margin: 1rem 0 0.02rem;
-    @include mobile-header-font {
-      font-weight: 200;
-      font-size: 2rem;
-    }
     @include tablet {
-      font-size: 1.5rem;
       margin: 0 0 0 3rem;
     }
     @include desktop {
-      font-size: 1.8rem;
       margin: 1.5rem 0 1.5rem 10rem;
     }
   }
