--- a/styles/shows.css
+++ b/styles/shows.css
@@ -42,22 +42,14 @@ body {
   text-decoration: none;
   color: #ffffff;
   margin: 1rem 0 0.02rem;
-  font-family: "Avenir";
-  font-weight: 700;
-  line-height: 2rem;
-  font-size: 1.5rem;
-  font-weight: 200;
-  font-size: 2rem;
 }
 @media screen and (min-width: 768px) {
   .nav__logo, .footer-item__logo {
-    font-size: 1.5rem;
     margin: 0 0 0 3rem;
   }
 }
 @media screen and (min-width: 1280px) {
   .nav__logo, .footer-item__logo {
-    font-size: 1.8rem;
     margin: 1.5rem 0 1.5rem 10rem;
   }
 }
